--- a/.gitignore
+++ b/.gitignore
@@ -284,3 +284,12 @@ pyrightconfig.json
 
 # Databricks
 .databricks
+
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
