--- a/databricks.yaml
+++ b/databricks.yaml
@@ -15,10 +15,10 @@ resources:
           path: ./src/notebooks/dlt-wikipedia-python.py
       edition: "ADVANCED"
       clusters:
-        - label: "default"
+        - cluster_key: common-cluster
           num_workers: 1
-          node_type_id: "Standard_DS3_v2"
-          driver_node_type_id: "Standard_DS3_v2"
+          node_type_id: Standard_DS3_v2
+          driver_node_type_id: Standard_DS3_v2
 
 #environments:
 #  development:
